# jacox

./: .dockerignore  .gitignore  .glitch-assets  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURES_GUIDE.md  GOVERNANCE.md  JOURNEY.md  LICENSE  MANIFESTO.md  PHILOSOPHY.md  PRINCIPLES.md  README.md  SKILLS.md  SPEC.md  SPECS.md  config.yaml  docker-compose.yml  package-lock.json  package.json  package.sh  shrinkwrap.yaml  test_ws.html
.agents/workflows/: ui_component_generator.md  ui_package_scout.md  web_researcher.md
.github/workflows/: ci.yml
client/: index.html  media.js  mtx-bg.js  styles.css
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
server/: index.js
skills/: doc_package_scout.md  duckdb_expert.md  frontend_best_practices.md  jac_llmos_expert.md  jacox_backend_expert.md  jacox_frontend_expert.md  jacox_skill_author.md  mcp_integration.md  reasoning_interface.md  status_brief_updater.md  stepbit_skill_author.md  ui_component_generator.md  ui_package_scout.md  web_researcher.md
src/: lib.rs  main.rs
src/api/: config_routes.rs  mod.rs  models.rs  models_openai.rs  models_ws.rs  pipeline_routes.rs  routes.rs  routes_openai.rs  skills_routes.rs  websocket.rs
src/cli/: commands.rs  mod.rs
src/config/: config.rs
src/db/: connection.rs  mod.rs  models.rs  (+1 more)
static/: index.html  playground.html
tasks/: COGNITIVE_PIPELINES_JACOX.md
tests/: db_persistence.rs  db_query.rs  pipeline_integration.rs  search_tool.rs  test_llmos.rs  test_stepbit_core.rs
(+43 files in other folders)
