[package]
name = "jacox"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
actix-files = "0.6"
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.2"
tokio = { version = "1", features = ["full"] }
duckdb = { version = "1.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
dotenv = "0.15"
thiserror = "1"
async-trait = "0.1"
tower = "0.4"
futures-util = "0.3.32"
async-stream = "0.3.6"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
qstring = "0.7"

[dev-dependencies]
wiremock = "0.6"
